Upgraded to JDK 10.