@@ -71,7 +71,7 @@ public class TablesHtml
 
 	public void writeDetail(int nValue) throws IOException
 	{
-		Integer pValue = new Integer(nValue);
+		Integer pValue = Integer.valueOf(nValue);
 		writeDetail(pValue.toString());
 	}
 
